Fix button alignment

--- a/themes/jeo-theme/assets/scss/3-layout/_l-header.scss
+++ b/themes/jeo-theme/assets/scss/3-layout/_l-header.scss
@@ -27,7 +27,7 @@ header.site-header {
         border-radius: 30px;
         text-transform: uppercase;
         height: 32px;
-        /*margin: auto;*/
+        margin: auto 0;
 
         i {
             margin-right: 10px;
